# puremvc-c-demo-cli-todo

./: CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  todos.json  todos.txt  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
include/todo/: i_delegate.h  i_service.h  i_storage.h
src/: application_facade.c  application_facade.h  main.c
src/controller/: service_command.c  service_command.h  startup_command.c  startup_command.h
src/model/: service_proxy.c  service_proxy.h
src/model/data/: json.c  json.h  plain.c  plain.h  storage.c  storage.h
src/model/enum/: status.c  status.h
src/model/storage/: i_storage.h  json.c  text.c  todo_json.c  todo_json.h  todo_text.c  todo_text.h
src/model/valueObject/: Argument.h  Command.h  Todo.c  Todo.h  argument.c  todo.c  todo.h
src/view/: cli_mediator.c  cli_mediator.h  service_mediator.c  service_mediator.h
src/view/components/: cli.c  cli.h  service.c  service.h
test/: CMakeLists.txt  integration_test.c  integration_test.h
test/model/: service_proxy_json_test.c  service_proxy_json_test.h  service_proxy_test.c  service_proxy_test.h  service_proxy_text_test.c
test/model/data/: storage_json_test.c  storage_json_test.h  storage_plain_test.c  storage_plain_test.h
test/model/storage/: json_test.c  text_test.c  todo_json_test.c  todo_json_test.h  todo_text_test.c  todo_text_test.h
test/model/valueObject/: argument_test.c  argument_test.h
test/view/components/: cli_test.c  cli_test.h  service_test.c  service_test.h
